--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "firebase": "^4.6.0",
+    "image-capture": "^0.3.5",
     "lodash": "^4.17.4",
     "material-design-lite": "^1.3.0",
     "vue": "^2.3.3",
